# reflection

./: README.md  hie.yaml  reflection.cabal  stack.yaml
src/: Gen.hs  State.hs  TDP.hs  TDP2.hs  Types.hs  Types2.hs
