cabal-version:  2.2
name:           reflection
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/reflection#readme>
homepage:       https://github.com/githubuser/reflection#readme
bug-reports:    https://github.com/githubuser/reflection/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/reflection

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
    , template-haskell
  default-language:
    Haskell2010
  default-extensions:


library
  import:
      common-stanza
  exposed-modules:
      Lib
      Types
      TDP
      State
      Types2
      -- if you add modules to your project, list them here
      -- so that they will be available to the executable and test suite
  hs-source-dirs:
      src

executable reflection-exe
  import:
      common-stanza
  main-is: 
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      reflection


test-suite reflection-test
  import:
      common-stanza
  type: 
      exitcode-stdio-1.0
  main-is: 
      Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      reflection

